# alkanes-rs

./: .dockerignore  .env.docker  .gitignore  .gitmodules  ADDITIONAL_INFORMATION_NEEDED.md  ALKANES_ASM_COMMON_COMPLETE.md  ALKANE_CONTEXT_LOGGING.md  AMM_IMPLEMENTATION_COMPLETE.md  AMM_INTEGRATION_FINAL_SUMMARY.md  AMM_INTEGRATION_SUMMARY.md  ASSEMBLYSCRIPT_SERIALIZATION_COMPLETE.md  ASSEMBLYSCRIPT_TX_SCRIPTS.md  AUDIT.md  AUTOMATIC_REORG_E2E_TEST.md  BATCH_POOLS_FINAL_IMPLEMENTATION.md  BATCH_POOLS_IMPLEMENTATION.md  BLOCK_349330_FIX_IMPLEMENTED.md  BLOCK_349330_NEW_ERROR.md  BLOCK_349330_ROOT_CAUSE.md  BLOCK_349330_SECOND_BUG_FIXED.md  BLOCK_349330_SUMMARY.txt  BRC20_PROG_DEPLOY_ADDRESS_ISSUE.md  BRC20_PROG_SDK_IMPLEMENTATION.md  BUG_REPORT_MANY_OUTPUTS.md  BUILD_COMPLETE.txt  BUILD_VERIFICATION.md  CHAIN_VALIDATION.md  CHAIN_VALIDATION_TESTS.md  CHANGES_SUMMARY.md  Cargo-vulkan.toml  Cargo.toml  Cargo.toml.backup  DATA_API_IMPLEMENTATION_COMPLETE.md  DETERMINISTIC_BUILDS.md  DUAL_COMPILATION_SUMMARY.md  Dockerfile  Dockerfile.builder  Dockerfile.dev  EXPERIMENTAL_ASM_READY.md  EXTENDED_RESPONSE_COMPLETE.md  (+108 more)
alkanes-tx-enricher/: Cargo.toml  README.md
alkanes-tx-enricher/examples/: analyze_transaction.sh
alkanes-tx-enricher/src/: main.rs  protorune.rs
alkanes/alkanes-std-auth-token/: Cargo.toml  alkanes.toml  contract.wit
alkanes/alkanes-std-auth-token/src/: lib.rs
alkanes/alkanes-std-factory-support/: Cargo.toml
alkanes/alkanes-std-factory-support/src/: lib.rs
alkanes/alkanes-std-genesis-protorune/: Cargo.toml  alkanes.toml  contract.wit
alkanes/alkanes-std-genesis-protorune/src/: lib.rs
alkanes/alkanes-std-owned-token/: Cargo.toml  alkanes.toml  contract.wit
alkanes/alkanes-std-owned-token-wit/: Cargo.toml  build.rs  owned-token.wit
alkanes/alkanes-std-owned-token-wit/src/: lib.rs
alkanes/alkanes-std-owned-token/src/: lib.rs
crates/alkanes-alloc/: Cargo.toml
crates/alkanes-alloc/src/: lib.rs  native_alloc.rs  spirv_alloc.rs  wasm_alloc.rs
crates/alkanes-cli/: Cargo.toml
crates/alkanes-cli-common/: CONVERSION_PATTERN.md  Cargo.toml  build.rs
crates/alkanes-cli-common/examples/: test_batch_bytecode.rs
crates/alkanes-cli-common/src/: address.rs  address_parser.rs  address_resolver.rs  api_client.rs  bitcoind.rs  brc20_prog_rpc.rs  brc20_prog_rpc_types.rs  broadcast_result.rs  byte_view.rs  commands.rs  conversion.rs  crypto.rs  crypto_worker.rs  error.rs  esplora.rs  index_pointer.rs  keystore.rs  lib.rs  lua_script.rs  metashrew.rs  mock_provider.rs  monitor.rs  native_provider.rs  network.rs  ord.rs  ordinals.rs  params_parser.rs  pending_tx_store.rs  provider.rs  provider.rs.bak  psbt_utils.rs  rpc.rs  runestone.rs  runestone_analysis.rs  runestone_enhanced.rs  subfrost.rs  traits.rs  transaction.rs  types.rs  wallet.rs  (+1 more)
crates/alkanes-cli-common/tests/: address_parsing.rs  bitcoind_provider_tests.rs.bak  concrete_provider_integration_tests.rs.bak  debug_armor_parsing.rs.bak  debug_binary_encrypt_decrypt.rs.bak  debug_decrypt_and_verify.rs.bak  debug_encrypt_and_sign.rs.bak  debug_encrypt_decrypt.rs.bak  debug_reference_pattern.rs.bak  debug_signed_message_reading.rs.bak  fee_calculation_test.rs  generatefuture_runestone_test.rs  integration_alkanes_edicts.rs.bak  integration_alkanes_execute.rs  keystore_logic_test.rs  parsing_tests.rs  pgp_rpgp_tests.rs.bak  protorunesbyoutpoint_test.rs  rebar_integration_test.rs  send_all_truncate_test.rs  split_max_vsize_test.rs  test_alkanes_inputs.rs  test_config.rs.bak  test_envelope_extraction.rs  test_rebar_integration.rs.bak  wallet_sign_transaction_test.rs  wc_signer_e2e.rs  witness_construction_test.rs
crates/alkanes-cli-sys/: Cargo.toml
crates/alkanes-cli-sys/src/: attest_upload.rs  keystore.rs  keystore_backup.rs  lib.rs  pretty_print.rs  provider.rs  utils.rs
crates/alkanes-cli-sys/tests/: keystore_tests.rs  transaction_size_calculation_test.rs
crates/alkanes-cli/src/: commands.rs  format_parser.rs  main.rs  mcp.rs  pretty_print.rs  wc_signer.rs
crates/alkanes-contract-indexer/: .env.example  .example.env  .gitignore  Cargo.toml  README.md  docker-entrypoint.sh
crates/alkanes-contract-indexer/migrations/: 20251004120000_add_subfrost.sql
crates/alkanes-contract-indexer/src/: config.rs  coordinator.rs  db.rs  inferred_transfers.rs  lib.rs  main.rs  pipeline.rs  poller.rs  progress.rs  provider.rs  schema.rs  transform_integration.rs
crates/alkanes-contract-indexer/tests/: block_460_reproduction.rs  trace_transform_test.rs  trade_extraction_unit_test.rs  transform_integration_test.rs  transform_service_integration_test.rs
crates/alkanes-data-api/: .env  .env.example  COMPLETION_REPORT.md  Cargo.toml  DOCKER_BUILD_SUCCESS.md  Dockerfile  FULL_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  README.md  REMAINING_IMPLEMENTATION.md  TODO.md
crates/alkanes-data-api/docs/: DEPLOYMENT.md  ENV_VARS_SUMMARY.md  FINAL_COMPLETION_SUMMARY.md  IMPLEMENTATION_STATUS.md  INFURA_API_KEY_SETUP.md  (+4 more)
crates/alkanes-ffi/: Cargo.toml  GETTING_STARTED.md  README.md  TEST_FFI.md  build.rs  generate-bindings.sh  uniffi.toml
crates/alkanes-gpu/: Cargo.toml  build.rs
crates/alkanes-gpu-shader/: Cargo.toml
crates/alkanes-indexer/: Cargo.toml
crates/alkanes-integ-tests/: Cargo.toml
crates/alkanes-jni/: Cargo.toml  README.md  build.rs
crates/alkanes-jsonrpc/: .env.example  ALKANES_NAMESPACE.md  CANCELLATION_README.md  Cargo.toml  LUA_EXAMPLE.lua  LUA_SCRIPTING_README.md  README.md  RPC_METHODS.md
crates/alkanes-kiln/: Cargo.toml
crates/alkanes-lazy-cell/: Cargo.toml
crates/alkanes-llvm/: Cargo.toml
crates/alkanes-native/: Cargo.toml
crates/alkanes-rpc-core/: Cargo.toml
crates/alkanes-runtime/: Cargo.toml
standalone-spirv-shader/: Cargo.toml
standalone-spirv-shader/src/: lib.rs
test-alkanes-deps-simple-shader/: Cargo.toml
test-alkanes-deps-simple-shader/src/: lib.rs
test-alkanes-sync-shader/: Cargo.toml
test-alkanes-sync-shader/src/: lib.rs
test-alkanes-wasmi-shader/: Cargo.toml  rustc-ice-2025-07-07T02:49:53.333682327Z-689660.txt
test-alkanes-wasmi-shader/src/: lib.rs
(+1771 files in other folders)
