[workspace]
members = [
    "crates/*",
    "alkanes/alkanes-std-owned-token-wit",
    "alkanes/alkanes-std-auth-token",
    "alkanes/alkanes-std-orbital",
    "alkanes/alkanes-std-genesis-alkane",
    "alkanes/alkanes-std-genesis-protorune",
    "alkanes/alkanes-std-genesis-alkane-upgraded",
    "alkanes/alkanes-std-genesis-alkane-upgraded-eoa",
    "alkanes/alkanes-std-proxy",
    "alkanes/alkanes-std-upgradeable",
    "alkanes/alkanes-std-upgradeable-beacon",
    "alkanes/alkanes-std-beacon-proxy",
    "alkanes/alkanes-std-owned-token",
    "alkanes/alkanes-std-merkle-distributor",
    "alkanes/alkanes-std-test",
    "alkanes/alkanes-std-test-2",
    "vendor/frtun-pair",
    "vendor/frtun-pair-codec",
    "vendor/frtun-http-async",
    "vendor/subfrost-wc",
    "vendor/tlsfetch-events",
    "vendor/tlsfetch-transport",
    "vendor/tlsfetch-ws",
    # Minimal native HTTP/2 client (tokio-rustls, server-auth) for the
    # alkanes-cli reproducible-build `upload` path. Vendored + trimmed
    # from kungfuflex/tlsfetch. Standalone: does NOT inherit tlsfetch's
    # rustls/h2 [patch.crates-io] forks (no persona ClientHello here).
    "vendor/tlsfetch-h2-client",
    "vendor/qubitcoin-crypto",
    "vendor/qubitcoin-primitives",
    "vendor/qubitcoin-serialize",
    "vendor/qubitcoin-script",
    "vendor/qubitcoin-consensus",
    "vendor/qubitcoin-util",
    "vendor/qubitcoin-storage",
    "vendor/qubitcoin-common",
    "vendor/qubitcoin-node",
    "vendor/qubitcoin-support",
    "vendor/qubitcoin-indexer-core",
    "vendor/qubitcoin-indexer",
    "vendor/qubitcoin-indexer-fork",
    "vendor/qubitcoin-rpc",
]
exclude = [
    "crates/alkanes-web-leptos",
    # v3 alignment: the in-tree v9 metashrew tree is no longer vendored — the core
    # crates are referenced from ~/metashrew (v10); the operational runner crates
    # (rockshrew-*/memshrew-*/minimal/macros) are excluded from the alkanes
    # protocol build and aligned to v10 separately.
    "crates/metashrew-core",
    "crates/metashrew-support",
    "crates/metashrew-runtime",
    "crates/metashrew-sync",
    "crates/metashrew-macros",
    "crates/metashrew-minimal",
    "crates/metashrew-memory-stress",
    "crates/memshrew-p2p",
    "crates/memshrew-runtime",
    "crates/rockshrew-debug",
    "crates/rockshrew-diff",
    "crates/rockshrew-mono",
    "crates/rockshrew-runtime",
]
resolver = "2"

[workspace.metadata.alkanes-data-api]
description = "REST API for alkanes"

[workspace.package]
version = "10.0.0"
edition = "2021"
description = "ALKANES metaprotocol indexer"
license = "MIT"
repository = "https://github.com/kungfuflex/alkanes-rs"

[workspace.dependencies]
anyhow = "1.0.90"
num = "0.4.3"
bitcoin = { version = "0.32.4", features = ["rand"] }
alkanes = { path = "./crates/alkanes" }
# v3/v10: alkanes-rs develop depends on metashrew's develop branch (v10, chunk
# API) via git — portable / CI-safe. The in-tree v9 metashrew vendor is excluded.
metashrew-core = { git = "https://github.com/kungfuflex/metashrew", branch = "develop" }
metashrew-support = { git = "https://github.com/kungfuflex/metashrew", branch = "develop" }
metashrew-runtime = { git = "https://github.com/kungfuflex/metashrew", branch = "develop" }
metashrew-sync = { git = "https://github.com/kungfuflex/metashrew", branch = "develop" }
memshrew-runtime = { path = "./crates/memshrew-runtime" }
memshrew-p2p = { path = "./crates/memshrew-p2p" }
rockshrew-runtime = { path = "./crates/rockshrew-runtime" }
rockshrew-mono = { path = "./crates/rockshrew-mono" }
rockshrew-diff = { path = "./crates/rockshrew-diff" }
metashrew-minimal = { path = "./crates/metashrew-minimal" }
ordinals = { path = "./crates/ordinals" }
protorune = { path = "./crates/protorune" }
protorune-support = { path = "./crates/protorune-support" }
alkanes-support = { path = "./crates/alkanes-support" }
alkanes-runtime = { path = "./crates/alkanes-runtime" }
alkanes-macros = { path = "./crates/alkanes-macros" }
alkanes-std-factory-support = { path = "./alkanes/alkanes-std-factory-support" }
alkanes-cli-common = { path = "./crates/alkanes-cli-common" }
alkanes-rpc-core = { path = "./crates/alkanes-rpc-core" }
alkanes-cli-sys = { path = "./crates/alkanes-cli-sys" }
alkanes-cli = { path = "./crates/alkanes-cli" }
alkanes-asc = { path = "./crates/alkanes-asc" }
alkanes-ffi = { path = "./crates/alkanes-ffi" }
alkanes-jni = { path = "./crates/alkanes-jni" }
alkanes-web-sys = { path = "./crates/alkanes-web-sys" }
alkanes-web-leptos = { path = "./crates/alkanes-web-leptos" }
alkanes-pretty-print-macro = { path = "./crates/alkanes-pretty-print-macro" }
ruint = "1.12.3"
wasm-bindgen = "0.2.121"
byteorder = "1.5"
wasm-bindgen-test = "0.3.71"
wasmi = "0.37.2"
serde = "1.0.210"
serde_json = "1.0.128"
hex = "0.4.3"
prost = "0.12.6"
prost-types = "0.12.6"
prost-build = "0.12.6"
bytes = "1.6.1"
sha2 = "0.10.9"
sha3 = "0.10"
tokio = { version = "1.43.0", default-features = false }
futures = "0.3.30"
log = "0.4.22"
wasm-bindgen-futures = "0.4.71"
web-sys = { version = "0.3.72", features = ["Response", "Window"] }
js-sys = "0.3.72"
hex_lit = "0.1.1"
once_cell = "1.20.1"
async-trait = "0.1"
thiserror = "1.0"
bitcoin_hashes = "0.14"
secp256k1 = "0.28"
bip39 = "2.0"
aes-gcm = "0.10"
rand = "0.8"
rand_core = "0.6"
base64 = "0.22"
lazy_static = "1.4"
regex = "1.0"
chrono = "0.4"
smallvec = "1.13"
protobuf = "3.4"
wasmprinter = "0.2"
wat = "1.0"
spin = "0.9"
wasmparser = "0.121"
dirs = "5.0"
tempfile = "3.8"
flate2 = "1.0"
reqwest = { version = "0.12", default-features = false }
clap = "4.5"
bitcoincore-rpc = "0.19"
bech32 = "0.11"
mockall = "0.12"
tabled = "0.15"
psbt-v2 = "0.1.0"
url = "2.5"
leptos = "0.6"
leptos_router = "0.6"
getrandom = "0.2"
env_logger = "0.11"

# Vendored tlsfetch stack (2026-06-09, TLSFETCH-WS-2 tick). The native
# WSS client used by wc_signer; backend-agnostic Stream / Connection /
# Listener traits + the event/profiler primitives those depend on.
tlsfetch-events = { path = "vendor/tlsfetch-events", default-features = false }
tlsfetch-transport = { path = "vendor/tlsfetch-transport", default-features = false }
tlsfetch-ws = { path = "vendor/tlsfetch-ws", default-features = false, features = ["native"] }

# Vendored 2026-06-10 — consolidates three byte-identical inline copies
# of the async H1/H1S helper that had grown across frtun-push-proxy,
# frtun-pair-bridge, and alkanes-cli-common::wc_signer. Engine-agnostic
# (no `[patch.crates-io] rustls = …`). Used only by wc-signer-native.
frtun-http-async = { path = "vendor/frtun-http-async" }

# Pinned for tlsfetch-ws + frtun-pair `client-native`. The rustls-tls-
# webpki-roots feature wires tokio-tungstenite's built-in cert
# verification — no patch-rustls surgery needed downstream.
tokio-tungstenite = { version = "0.23", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

# EVM assembler for bytecode generation
emasm = { git = "https://github.com/kungfuflex/emasm-rs", branch = "master" }
emasm-common = { git = "https://github.com/kungfuflex/emasm-rs", branch = "master" }
protobuf-json-mapping = "3.4"
pbkdf2 = "0.12"

# Huff-rs for EVM bytecode generation (experimental features)
huff_utils = { git = "https://github.com/huff-language/huff-rs", branch = "main" }
huff_codegen = { git = "https://github.com/huff-language/huff-rs", branch = "main" }

# Reproducible-build profile for the mainnet alkanes.wasm shipped to
# subkube. codegen-units=1 + lto="fat" eliminate the parallelism-driven
# nondeterminism in the default release profile; strip="debuginfo"
# removes path-dependent debug records. Compile time goes up substantially
# but the wasm bytes are byte-identical across machines given the same
# rustc + Cargo.lock + source tree (see scripts/build.sh --verify).
[profile.release]
codegen-units = 1
lto = "fat"
strip = "debuginfo"
