[package]
name = "alkanes"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
# align-main reconcile: explicit member list (not a `crates/*` glob) so the two
# version-conflicted web frontends are omitted cleanly — `exclude` does not
# reliably drop glob-matched members on this cargo version.
#
# Deliberately OMITTED (present in-tree, not workspace members):
#   * crates/alkanes-web-leptos  — leptos 0.6 frontend (excluded on develop too).
#   * crates/alkanes-web-sys     — needs wasm-bindgen 0.2.121 (Option<JsValue>:
#     OptionFromWasmAbi); the indexer closure pins wasm-bindgen =0.2.100. Single-
#     version conflict; re-add once the indexer's wasm-bindgen pin advances.
# The in-tree v10 metashrew/rockshrew/memshrew runner crates were removed
# entirely (they need metashrew v10, which collides with the v9.0.5-rc.8 pin).
members = [
    ".",
    "crates/alkanes-asc",
    "crates/alkanes-build",
    "crates/alkanes-cli",
    "crates/alkanes-cli-common",
    "crates/alkanes-cli-sys",
    "crates/alkanes-contract-indexer",
    "crates/alkanes-data-api",
    "crates/alkanes-ffi",
    "crates/alkanes-jni",
    "crates/alkanes-jsonrpc",
    "crates/alkanes-llvm",
    "crates/alkanes-macros",
    "crates/alkanes-pretty-print-macro",
    "crates/alkanes-rpc-core",
    "crates/alkanes-runtime",
    "crates/alkanes-std-auth-token",
    "crates/alkanes-std-beacon-proxy",
    "crates/alkanes-std-factory-support",
    "crates/alkanes-std-genesis-alkane",
    "crates/alkanes-std-genesis-alkane-upgraded",
    "crates/alkanes-std-genesis-alkane-upgraded-eoa",
    "crates/alkanes-std-genesis-protorune",
    "crates/alkanes-std-merkle-distributor",
    "crates/alkanes-std-orbital",
    "crates/alkanes-std-owned-token",
    "crates/alkanes-std-proxy",
    "crates/alkanes-std-recycle",
    "crates/alkanes-std-test",
    "crates/alkanes-std-test-2",
    "crates/alkanes-std-upgradeable",
    "crates/alkanes-std-upgradeable-beacon",
    "crates/alkanes-support",
    "crates/alkanes-trace-transform",
    "crates/alkanes-wit-build",
    "crates/alkanes-wit-codegen",
    "crates/alkanes-wit-parser",
    "crates/ordinals",
    "crates/protorune",
    "crates/protorune-support",
    "crates/wc-signer-core",
    "vendor/subfrost-wc",
    "vendor/frtun-pair",
    "vendor/frtun-pair-codec",
    "vendor/frtun-http-async",
    "vendor/tlsfetch-events",
    "vendor/tlsfetch-transport",
    "vendor/tlsfetch-ws",
    # Minimal native HTTP/2 client (tokio-rustls, server-auth) for the
    # alkanes-cli reproducible-build `upload` path. Vendored + trimmed
    # from kungfuflex/tlsfetch. Standalone: does NOT inherit tlsfetch's
    # rustls/h2 [patch.crates-io] forks (no persona ClientHello here).
    "vendor/tlsfetch-h2-client",
]

[workspace.package]
version = "2.2.1-rc.3"
edition = "2021"
description = "ALKANES metaprotocol indexer"
license = "MIT"
repository = "https://github.com/kungfuflex/alkanes-rs"

[workspace.dependencies]
anyhow = "1.0.90"
num = "0.4.3"
bitcoin = { version = "0.32.4", features = ["rand"] }
metashrew-core = { git = "https://github.com/kungfuflex/metashrew", tag = "v9.0.5-rc.8" }
metashrew-support = { git = "https://github.com/kungfuflex/metashrew", tag = "v9.0.5-rc.8" }
ordinals = { path = "./crates/ordinals" }
protorune = { path = "./crates/protorune" }
protorune-support = { path = "./crates/protorune-support" }
alkanes-support = { path = "./crates/alkanes-support" }
alkanes-runtime = { path = "./crates/alkanes-runtime" }
alkanes-macros = { path = "./crates/alkanes-macros" }
alkanes-std-factory-support = { path = "./crates/alkanes-std-factory-support" }
ruint = "1.12.3"
wasm-bindgen = "=0.2.100"
byteorder = "1.5"
wasm-bindgen-test = "=0.3.50"
wasmi = "0.37.2"
serde = "1.0.210"
serde_json = "1.0.128"
hex = "0.4.3"
prost = "0.12.6"
prost-types = "0.12.6"
prost-build = "0.12.6"
bytes = "1.6.1"
wasm-bindgen-futures = "=0.4.50"
web-sys = { version = "0.3.72", features = ["Response", "Window"] }
js-sys = "0.3.72"
hex_lit = "0.1.1"
once_cell = "1.20.1"

# --- align-main reconcile: ADDITIVE workspace.dependencies for the portable
# (non-indexer) crate set overlaid from origin/develop. None of these are used
# by the indexer's own [dependencies]; they exist so the CLI + rpc/jsonrpc +
# data-api + wit/asc/ffi/etc. workspace members build. The indexer's resolved
# versions (metashrew v9, wasm-bindgen =0.2.100, etc.) are intentionally NOT
# changed above.
alkanes-cli = { path = "./crates/alkanes-cli" }
alkanes-cli-common = { path = "./crates/alkanes-cli-common" }
alkanes-cli-sys = { path = "./crates/alkanes-cli-sys" }
alkanes-rpc-core = { path = "./crates/alkanes-rpc-core" }
alkanes-asc = { path = "./crates/alkanes-asc" }
alkanes-ffi = { path = "./crates/alkanes-ffi" }
alkanes-jni = { path = "./crates/alkanes-jni" }
alkanes-web-sys = { path = "./crates/alkanes-web-sys" }
alkanes-web-leptos = { path = "./crates/alkanes-web-leptos" }
alkanes-pretty-print-macro = { path = "./crates/alkanes-pretty-print-macro" }
sha2 = "0.10.9"
sha3 = "0.10"
tokio = { version = "1.43.0", default-features = false }
futures = "0.3.30"
log = "0.4.22"
async-trait = "0.1"
thiserror = "1.0"
bitcoin_hashes = "0.14"
secp256k1 = "0.28"
bip39 = "2.0"
aes-gcm = "0.10"
rand = "0.8"
rand_core = "0.6"
base64 = "0.22"
lazy_static = "1.4"
regex = "1.0"
chrono = "0.4"
smallvec = "1.13"
protobuf = "3.4"
wasmprinter = "0.2"
wat = "1.0"
spin = "0.9"
wasmparser = "0.121"
dirs = "5.0"
tempfile = "3.8"
flate2 = "1.0"
reqwest = { version = "0.12", default-features = false }
clap = "4.5"
bitcoincore-rpc = "0.19"
bech32 = "0.11"
mockall = "0.12"
tabled = "0.15"
psbt-v2 = "0.1.0"
url = "2.5"
leptos = "0.6"
leptos_router = "0.6"
getrandom = "0.2"
env_logger = "0.11"
protobuf-json-mapping = "3.4"
pbkdf2 = "0.12"
tlsfetch-events = { path = "vendor/tlsfetch-events", default-features = false }
tlsfetch-transport = { path = "vendor/tlsfetch-transport", default-features = false }
tlsfetch-ws = { path = "vendor/tlsfetch-ws", default-features = false, features = ["native"] }
frtun-http-async = { path = "vendor/frtun-http-async" }
tokio-tungstenite = { version = "0.23", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
emasm = { git = "https://github.com/kungfuflex/emasm-rs", branch = "master" }
emasm-common = { git = "https://github.com/kungfuflex/emasm-rs", branch = "master" }
huff_utils = { git = "https://github.com/huff-language/huff-rs", branch = "main" }
huff_codegen = { git = "https://github.com/huff-language/huff-rs", branch = "main" }

[features]
test-utils = []
testnet = []
dogecoin = []
luckycoin = []
bellscoin = []
fractal = []
mainnet = ["protorune/mainnet"]
proxy = []
owned_token = []
auth_token = []
genesis_alkane = []
regtest = []
genesis_protorune = []
amm_pool = ["auth_token"]
amm_factory = ["auth_token"]
amm = ["amm_pool", "amm_factory"]
orbital = []
cache = ["protorune/cache"]
all = []
minimal = [
    "refunder",
    "merkle_distributor",
    "free_mint",
    "upgradeable",
    "proxy",
]
refunder = []
merkle_distributor = []
free_mint = []
upgradeable = []
# Forward to metashrew-core (where the println!/print! macros live) and
# protorune (which uses them too). Default OFF — the wasmi→host `__log`
# call per println dominates per-block budget on mass-mint blocks once
# diesel-precompile has bypassed wasmi for the inner alkane execution.
debug-log = ["metashrew-core/debug-log", "protorune/debug-log"]
# fastpath: force the DIESEL precompile active from genesis instead of
# waiting for V220_FORK_HEIGHT. The native DIESEL implementation
# (precompile_diesel.rs) ships in every production build — `fastpath`
# only changes WHEN it dispatches. Mainnet builds (default) activate
# the precompile automatically at height >= V220_FORK_HEIGHT (950_000),
# so pre-fork blocks remain byte-equivalent to v2.1.7. `fastpath` is
# for regtest/dev where there is no fork height. Consensus equivalence
# is enforced by `tests::diesel_shadow`.
fastpath = []


[dependencies]
anyhow = { workspace = true }
num = { workspace = true }
bitcoin = { workspace = true }
metashrew-core = { workspace = true }
metashrew-support = { workspace = true }
ordinals = { workspace = true }
protorune = { workspace = true }
protorune-support = { workspace = true }
alkanes-support = { workspace = true }
ruint = { workspace = true }
wasm-bindgen = { workspace = true }
byteorder = { workspace = true }
wasm-bindgen-test = { workspace = true }
wasmi = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
bytes = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
hex_lit = { workspace = true }
once_cell = { workspace = true }
borsh = { version = "1.5.7", features = ["derive"] }
sha2 = "0.10.9"

[dev-dependencies]

alkanes = { path = ".", features = [
    "genesis_alkane",
    "genesis_protorune",
    "amm",
    "orbital",
    "auth_token",
    "minimal",
] }
metashrew-core = { git = "https://github.com/kungfuflex/metashrew", tag = "v9.0.5-rc.8", features = ["test-utils"] }
protorune = { path = "crates/protorune", features = ["test-utils"] }

[build-dependencies]
anyhow = { workspace = true }
flate2 = "1.0.34"
hex = { workspace = true }

# Reproducible-build profile for the mainnet alkanes.wasm shipped to
# subkube. codegen-units=1 + lto="fat" eliminate the parallelism-driven
# nondeterminism in the default release profile; strip="debuginfo"
# removes path-dependent debug records. Compile time goes up substantially
# but the wasm bytes are byte-identical across machines given the same
# rustc + Cargo.lock + source tree (see scripts/build.sh --verify).
[profile.release]
codegen-units = 1
lto = "fat"
strip = "debuginfo"
