[package]
name = "standalone-spirv-shader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "7e54ed23" }

[patch.crates-io]
# Force libm to use the working version for SPIR-V compatibility
libm = { version = "=0.2.8" }