[package]
name = "alkanes-std-auth-token"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-runtime = { workspace = true }
alkanes-support = { workspace = true }
anyhow = { workspace = true }
bitcoin = { workspace = true }
metashrew-support = { workspace = true }
protorune-support = { workspace = true }
alkanes-std-factory-support = { path = "../alkanes-std-factory-support" }

[build-dependencies]
alkanes-wit-build = { path = "../../crates/alkanes-wit-build" }
