[package]
name = "alkanes-std-genesis-protorune"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
alkanes-runtime = { workspace = true }
alkanes-support = { workspace = true }
anyhow = { workspace = true }
bitcoin = { workspace = true }
hex = { workspace = true }
metashrew-support = { workspace = true }
protorune-support = { workspace = true }
